vertical scrollbar fixed

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ footer {
 }
 
 .upper_img img {
-    width: 99.5vw;
+    width: 99.4vw;
     height: 200px;
     object-fit: cover;
     object-position: center;
