--- a/styles/standard.css
+++ b/styles/standard.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-    width: 100%;
+    width: 100vw;
     height: 100px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
@@ -35,7 +35,7 @@ main {
 }
 
 footer {
-    width: 100%;
+    width: 100vw;
     height: 100px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
@@ -43,7 +43,7 @@ footer {
     position: fixed;
     bottom: 0;
     left: 0;
-    padding: 0 20px;
+    /* padding: 0 20px; */
 }
 
 a {
